--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <form action="Location.com" method="post">
+        <div>
+            <fieldset>
+                <legend>Contact</legend>
+                <label for="name">*Name: </label>
+                <input type="text" name="name" id="name" required>
+                <br>
+                <label for="email">Email: </label>
+                <input type="email" name="email" id="email">
+                <br>
+                <label for="fav-number">Favourite Number</label>
+                <input type="number" name="number" id="fav-number" max="20">
+                <br>
+                <div class="form-field">
+                    <label for="message">Message: </label>
+                    <br>
+                    <textArea name="message" id="message" minlength="3" maxlength="100" title="Please enter a message a least 3 chsarsrasd"></textArea>
+                </div>
+                
+                <br>
+                <button type="submit">Send Your Message!</button>
+            </fieldset>
+        </div>
+    </form>
 </body>
 </html>
