--- a/index.html
+++ b/index.html
@@ -16,10 +16,53 @@
             </div>
         </div>
         <div class="right-container">
-            <form action="#" method="post">
-                <label for="first-name">First Name: </label>
-                <input type="text" required id="first-name">
-            </form>
+            <div class="top-text-content">
+                <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.<br>Sign up now to get started.</p>
+                <br>
+                <p>You know you want to.</p>
+            </div>
+            <div id="form-div">            
+                <form action="#" method="post" id="form-id">
+                    <h3>Let's do this!</h3>
+                    <div class="form-field-container">
+                        <div class="field">                        
+                            <label for="first-name">FIRST NAME</label>
+                            <br>
+                            <input type="text" name="first-name" id="first-name" required>
+                        </div>
+                        <div class="field">                        
+                            <label for="last-name">LAST NAME</label>
+                            <br>
+                            <input type="text" name="last-name" id="last-name" required>
+                    </div>
+                    <div class="form-field-container">
+                        <div class="field">
+                            <label for="email">EMAIL</label>
+                            <br>
+                            <input type="email" name="email" id="email" required>
+                        </div>
+                        <div class="field">
+                            <label for="phone-number">PHONE NUMBER</label>
+                            <br>
+                            <input type="tel" name="phone-number" id="phone-number" required>
+                        </div>
+                    </div>
+                    <div class="form-field-container">
+                        <div class="field">
+                            <label for="password">PASSWORD</label>
+                            <br>
+                            <input type="password" name="password" id="password" required>
+                        </div>
+                        <div class="field">
+                            <label for="confirm-password">CONFIRM PASSWORD</label>
+                            <br>
+                            <input type="password" name="confirm-password" id="confirm-password" required>
+                        </div>
+                    </div>
+                    <button type="submit">Create Account</button>
+                </form>
+            </div>
+
         </div>
     </div>
 </body>
