Seperated the css into different files

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Validation Form</title>
      <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="/styles/form-validation-style.css">
      <script defer src="script.js"></script>
 </head>
 <body>
@@ -34,17 +35,18 @@
                             <label for="last-name">LAST NAME</label>
                             <br>
                             <input type="text" name="last-name" id="last-name" required>
+                        </div>
                     </div>
                     <div class="form-field-container">
-                        <div class="field">
+                        <div class="field">   
                             <label for="email">EMAIL</label>
                             <br>
                             <input type="email" name="email" id="email" required>
                         </div>
-                        <div class="field">
+                        <div class="field">   
                             <label for="phone-number">PHONE NUMBER</label>
                             <br>
-                            <input type="tel" name="phone-number" id="phone-number" required>
+                            <input type="tel" name="phone-number" id="phone-number" required maxlength="15">
                         </div>
                     </div>
                     <div class="form-field-container">
@@ -59,8 +61,12 @@
                             <input type="password" name="confirm-password" id="confirm-password" required>
                         </div>
                     </div>
+                    <br>
                     <button type="submit">Create Account</button>
                 </form>
+            </div>
+            <div>
+                <p>Already have an account? <a href="#">Log in</a></p>
             </div>
 
         </div>
