--- a/index.html
+++ b/index.html
@@ -17,58 +17,59 @@
             </div>
         </div>
         <div class="right-container">
-            <div class="top-text-content">
-                <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.<br>Sign up now to get started.</p>
-                <br>
-                <p>You know you want to.</p>
-            </div>
-            <div id="form-div">            
-                <form action="#" method="post" id="form-id">
-                    <h3>Let's do this!</h3>
-                    <div class="form-field-container">
-                        <div class="field">                        
-                            <label for="first-name">FIRST NAME</label>
-                            <br>
-                            <input type="text" name="first-name" id="first-name" required>
-                        </div>
-                        <div class="field">                        
-                            <label for="last-name">LAST NAME</label>
-                            <br>
-                            <input type="text" name="last-name" id="last-name" required>
-                        </div>
-                    </div>
-                    <div class="form-field-container">
-                        <div class="field">   
-                            <label for="email">EMAIL</label>
-                            <br>
-                            <input type="email" name="email" id="email" required>
-                        </div>
-                        <div class="field">   
-                            <label for="phone-number">PHONE NUMBER</label>
-                            <br>
-                            <input type="tel" name="phone-number" id="phone-number" required maxlength="15">
-                        </div>
-                    </div>
-                    <div class="form-field-container">
-                        <div class="field">
-                            <label for="password">PASSWORD</label>
-                            <br>
-                            <input type="password" name="password" id="password" required>
-                        </div>
-                        <div class="field">
-                            <label for="confirm-password">CONFIRM PASSWORD</label>
-                            <br>
-                            <input type="password" name="confirm-password" id="confirm-password" required>
-                        </div>
-                    </div>
+            <div class="right-top-section">
+                <div class="top-text-content">
+                    <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.<br>Sign up now to get started.</p>
                     <br>
+                    <p>You know you want to.</p>
+                </div>
+            </div>         
+                <form action="#" method="post" id="form-id">
+                    <div id="form-div">
+                        <h3>Let's do this!</h3>
+                        <div class="form-field-container">
+                            <div class="field">                        
+                                <label for="first-name">FIRST NAME</label>
+                                <br>
+                                <input type="text" name="first-name" id="first-name" minlength="3" required>
+                            </div>
+                            <div class="field">                        
+                                <label for="last-name">LAST NAME</label>
+                                <br>
+                                <input type="text" name="last-name" id="last-name" minlength="3" required>
+                            </div>
+                        </div>
+                        <div class="form-field-container">
+                            <div class="field">   
+                                <label for="email">EMAIL</label>
+                                <br>
+                                <input type="email" name="email" id="email" required>
+                            </div>
+                            <div class="field">   
+                                <label for="phone-number">PHONE NUMBER</label>
+                                <br>
+                                <input type="tel" name="phone-number" id="phone-number" required maxlength="15">
+                            </div>
+                        </div>
+                        <div class="form-field-container">
+                            <div class="field">
+                                <label for="password">PASSWORD</label>
+                                <br>
+                                <input type="password" name="password" id="password" required>
+                            </div>
+                            <div class="field">
+                                <label for="confirm-password">CONFIRM PASSWORD</label>
+                                <br>
+                                <input type="password" name="confirm-password" id="confirm-password" required>
+                            </div>
+                        </div>
+                        <br>
+                    </div>
                     <button type="submit">Create Account</button>
+                    <div>
+                        <p class="has-account">Already have an account? <a href="#">Log in</a></p>
+                    </div>
                 </form>
-            </div>
-            <div>
-                <p>Already have an account? <a href="#">Log in</a></p>
-            </div>
-
         </div>
     </div>
 </body>
